added functionality to login & register buttons

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-    <!-- partial:index.partial.html -->
+    <!-- navbar -->
     <nav class="navbar navbar-expand-custom navbar-mainbg">
         <a class="navbar-brand navbar-logo" href="#">kulture kitchen</a>
         <button class="navbar-toggler" type="button" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -40,10 +40,11 @@
                     <a class="nav-link" href="javascript:void(0);"><i class="fas fa-address-book"></i>Contact</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="javascript:void(0);" onclick="toggleLogin()"><i class="fas fa-arrow-right-to-bracket"></i>Login</a>
+                    <a class="nav-link" href="javascript:void(0);" onclick="toggleLogin()"><i
+                            class="fas fa-arrow-right-to-bracket"></i>Login</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="javascript:void(0);"><i class="fas fa-address-card"></i>Register</a>
+                    <a class="nav-link" href="javascript:void(0);" onclick="toggleRegister()"><i class="fas fa-address-card"></i>Register</a>
                 </li>
                 <!--<li class="nav-item">
                     <a class="nav-link" href="javascript:void(0);"><i class="far fa-copy"></i>Documents</a>
@@ -51,6 +52,7 @@
             </ul>
         </div>
     </nav>
+    <!-- login -->
     <div class="overlay">
         <div class="login">
             <div class="header">
@@ -68,6 +70,36 @@
             </div>
         </div>
     </div>
+    <!-- register -->
+    <div class="overlay-register">
+        <div class="register">
+            <div class="header">
+                <h1>Registration</h1>
+                <i class="fas fa-times" onclick="toggleRegister()"></i>
+            </div>
+            <div class="body">
+                <form action="#" class="form">
+                    <input type="text" placeholder="First Name" />
+                    <input type="text" placeholder="Last Name" />
+                    <input type="text" placeholder="Username" />
+                    <input type="text" placeholder="Email address" />
+                    <input type="password" placeholder="Password" />
+                    <input type="password" placeholder="Confirm Password" />
+                    <div class="gender">
+                        <input type="radio" value="None" id="male" name="gender" checked />
+                        <label for="male" class="radio">Male</label>
+                        <input type="radio" value="None" id="female" name="gender" />
+                        <label for="female" class="radio">Female</label>
+                    </div>
+                    <p>By clicking Register, you agree to our <a href="#">terms and condition</a>.</p>
+                </form>
+            </div>
+            <div class="footer">
+                <button>Register</button>
+            </div>
+        </div>
+    </div>
+
 
     <!-- partial -->
     <script src='https://code.jquery.com/jquery-3.4.1.min.js'></script>
@@ -75,6 +107,7 @@
     <script src='https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js'></script>
     <script src="/js/navbar.js"></script>
     <script src="/js/login.js"></script>
+    <script src="/js/register.js"></script>
 
 </body>
 
