--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <a class="nav-link" href="javascript:void(0);"><i class="fas fa-percent"></i>Discounts</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="javascript:void(0);"><i class="fas fa-address-book"></i>Contact</a>
+                    <a class="nav-link" href="/contact.html"><i class="fas fa-address-book"></i>Contact</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="javascript:void(0);" onclick="toggleLogin()"><i
