--- a/contact.html
+++ b/contact.html
@@ -3,18 +3,14 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport"
+        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <title>CodePen - Responsive Contact Form</title>
     <link href='https://fonts.googleapis.com/css?family=Lato:400,100,300' rel='stylesheet' type='text/css'>
-
     <link href="https://fonts.googleapis.com/css?family=Raleway:100,400,700" rel="stylesheet">
-
     <link href="https://fonts.googleapis.com/css?family=Oswald:200,400,700" rel="stylesheet">
-
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-
-
     <script src="https://use.fontawesome.com/20ab91acc4.js"></script>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel='stylesheet' href='//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css'>
     <link rel="stylesheet" href="/css/contact.css">
 
