--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport"
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <title>CodePen - Responsive Contact Form</title>
+    <title>Contact Us</title>
     <link href='https://fonts.googleapis.com/css?family=Lato:400,100,300' rel='stylesheet' type='text/css'>
     <link href="https://fonts.googleapis.com/css?family=Raleway:100,400,700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Oswald:200,400,700" rel="stylesheet">
