making contact page responsive

--- a/contact.html
+++ b/contact.html
@@ -17,6 +17,7 @@
 </head>
 
 <body>
+    <a class="navbar-brand navbar-logo" href="/index.html">kulture kitchen</a>
     <!-- partial:index.partial.html -->
     <section id="contact">
 
