--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-    <a class="navbar-brand navbar-logo" href="/index.html">kulture kitchen</a>
+    
     <!-- partial:index.partial.html -->
     <section id="contact">
 
@@ -84,6 +84,21 @@
                     </li>
                 </ul>
                 <hr>
+                <br>
+                <br>
+                <br>
+                <br>
+                <ul class="social-media-list">
+                    <li>
+                <a href="/index.html" target="_blank" class="contact-icon">
+                    <i class="fa fa-tv" aria-hidden="true"></i></a>
+                    </li>
+                    </ul>
+                    <br>
+                <br>
+                <br>
+                <br>
+            
 
                 <div class="copyright">&copy; ALL OF THE RIGHTS RESERVED</div>
 
