home button issue ?

--- a/contact.html
+++ b/contact.html
@@ -90,7 +90,7 @@
                 <br>
                 <ul class="social-media-list">
                     <li>
-                <a href="/index.html" target="_blank" class="contact-icon">
+                <a href="https://kusine-kulture.netlify.app/">
                     <i class="fa fa-tv" aria-hidden="true"></i></a>
                     </li>
                     </ul>
