icons issue resolved

--- a/contact.html
+++ b/contact.html
@@ -11,6 +11,7 @@
     <link href="https://fonts.googleapis.com/css?family=Oswald:200,400,700" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <script src="https://use.fontawesome.com/20ab91acc4.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css" integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel='stylesheet' href='//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css'>
     <link rel="stylesheet" href="/css/contact.css">
 
@@ -71,16 +72,16 @@
                 <hr>
                 <ul class="social-media-list">
                     <li><a href="#" target="_blank" class="contact-icon">
-                            <i class="fa fa-facebook" aria-hidden="true"></i></a>
+                            <i class="fa-brands fa-facebook" aria-hidden="true"></i></a>
                     </li>
                     <!--<li><a href="#" target="_blank" class="contact-icon">
                             <i class="fa fa-codepen" aria-hidden="true"></i></a>
                     </li> -->
                     <li><a href="#" target="_blank" class="contact-icon">
-                            <i class="fa fa-twitter" aria-hidden="true"></i></a>
+                            <i class="fa-brands fa-twitter" aria-hidden="true"></i></a>
                     </li>
                     <li><a href="#" target="_blank" class="contact-icon">
-                            <i class="fa fa-instagram" aria-hidden="true"></i></a>
+                            <i class="fa-brands fa-instagram" aria-hidden="true"></i></a>
                     </li>
                 </ul>
                 <hr>
@@ -88,12 +89,10 @@
                 <br>
                 <br>
                 <br>
-                <ul class="social-media-list">
-                    <li>
-                <a href="https://kusine-kulture.netlify.app/">
-                    <i class="fa fa-tv" aria-hidden="true"></i></a>
-                    </li>
-                    </ul>
+                
+                <a href="/index.html" class="fa-4x" style="color: #fff; margin-left: 100px;" >
+                    <i class="fa fa-tv fa-beat" aria-hidden="true"></i></a>
+                   
                     <br>
                 <br>
                 <br>
