--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@
     <!-- partial:index.partial.html -->
     <section id="contact">
 
-        <h1 class="section-header">Contact</h1>
+        <h1 class="section-header">Hit us up!</h1>
 
         <div class="contact-wrapper">
 
@@ -46,7 +46,7 @@
 
                 <textarea class="form-control" rows="10" placeholder="MESSAGE" name="message" required></textarea>
 
-                <button class="btn btn-primary send-button" id="submit" type="submit" value="SEND">
+                <button class="btn btn-dark send-button" id="submit" type="submit" value="SEND">
                     <div class="alt-send-button">
                         <i class="fa fa-paper-plane"></i><span class="send-text">SEND</span>
                     </div>
