--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css"
         integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.2.3/css/bootstrap.min.css" integrity="sha512-SbiR/eusphKoMVVXysTKG/7VseWii+Y3FdHrt0EpKgpToZeemhqHeZeLWLhJutz/2ut2Vw1uQEj2MbRF+TVBUA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <link rel="stylesheet" href="/css/HomePage.css">
 
@@ -83,46 +84,46 @@
                     <div class="row">
                         <div class="col-md-6">
                             <div class="single_menu">
-                                <img src="https://i.imgur.com/kbpceNv.jpg" alt="burger">
+                                <img src="./images/Afang Soup - Nigerian Cuisine.jpeg" alt="burger">
                                 <div class="menu_content">
-                                    <h4>Chicken Burger  <span>$24</span></h4>
+                                    <h4>Afang Soup  <span>$24</span></h4>
                                     <p>Aperiam tempore sit,perferendis numquam repudiandae porro voluptate dicta saepe facilis.</p>
                                 </div>
                             </div>
                             <div class="single_menu">
-                                <img src="https://i.imgur.com/lYKUORL.jpg" alt="black coffee">
+                                <img src="./images/Delicious Ofe Akwu _ Palm nut Soup.png" alt="black coffee">
                                 <div class="menu_content">
-                                    <h4>Black coffee <span>$20</span></h4>
+                                    <h4>Akwu Stew  <span>$20</span></h4>
                                     <p>Aperiam tempore sit,perferendis numquam repudiandae porro voluptate dicta saepe facilis.</p>
                                 </div>
                             </div>
                             <div class="single_menu">
-                                <img src="https://i.imgur.com/AXAHrf6.jpg" alt="fried rice">
+                                <img src="./images/Egusi Soup Recipe - How to cook egusi soup.jpeg" alt="fried rice">
                                 <div class="menu_content">
-                                    <h4>Fried Rice  <span>$45</span></h4>
+                                    <h4>Egusi Soup  <span>$45</span></h4>
                                     <p>Aperiam tempore sit,perferendis numquam repudiandae porro voluptate dicta saepe facilis.</p>
                                 </div>
                             </div>
                             <div class="single_menu">
-                                <img src="https://i.imgur.com/YkDi8Nb.jpg" alt="meat">
+                                <img src="./images/Nigerian Moi Moi with Beans Flour.png" alt="meat">
                                 <div class="menu_content">
-                                    <h4>meat  <span>$24</span></h4>
+                                    <h4>Moi Moi  <span>$24</span></h4>
                                     <p>Aperiam tempore sit,perferendis numquam repudiandae porro voluptate dicta saepe facilis.</p>
                                 </div>
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="single_menu">
-                                <img src="https://i.imgur.com/TAq7lDR.jpg" alt="burger">
+                                <img src="./images/Nigerian Tomato Stew (Nigerian Red Stew).jpeg" alt="burger">
                                 <div class="menu_content">
-                                    <h4>Chicken Burger  <span>$24</span></h4>
+                                    <h4>Rice and Stew  <span>$24</span></h4>
                                     <p>Aperiam tempore sit,perferendis numquam repudiandae porro voluptate dicta saepe facilis.</p>
                                 </div>
                             </div>
                             <div class="single_menu">
-                                <img src="https://i.imgur.com/lYKUORL.jpg" alt="black coffee">
+                                <img src="./images/Peppered Ponmo Recipe -.jpeg" alt="black coffee">
                                 <div class="menu_content">
-                                    <h4>Black coffee <span>$20</span></h4>
+                                    <h4>Peppered Ponmo <span>$20</span></h4>
                                     <p>Aperiam tempore sit,perferendis numquam repudiandae porro voluptate dicta saepe facilis.</p>
                                 </div>
                             </div>
@@ -329,6 +330,7 @@
     <script src='https://code.jquery.com/jquery-3.4.1.min.js'></script>
     <script src='https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js'></script>
     <script src='https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js'></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.2.3/js/bootstrap.min.js" integrity="sha512-1/RvZTcCDEUjY/CypiMz+iqqtaoQfAITmNSJY17Myp4Ms5mdxPS5UV7iOfdZoxcGhzFbOm6sntTKJppjvuhg4g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="/js/navbar.js"></script>
     <script src="/js/login.js"></script>
     <script src="/js/register.js"></script>
