--- a/index.html
+++ b/index.html
@@ -128,16 +128,16 @@
                                 </div>
                             </div>
                             <div class="single_menu">
-                                <img src="https://i.imgur.com/AXAHrf6.jpg" alt="fried rice">
+                                <img src="/images/Foods in Nigeria_ Oxtail Peppersoup Recipe - Dream Africa.jpeg" alt="fried rice">
                                 <div class="menu_content">
-                                    <h4>Fried Rice  <span>$45</span></h4>
+                                    <h4>Pepper Soup  <span>$45</span></h4>
                                     <p>Aperiam tempore sit,perferendis numquam repudiandae porro voluptate dicta saepe facilis.</p>
                                 </div>
                             </div>
                             <div class="single_menu">
-                                <img src="https://i.imgur.com/YkDi8Nb.jpg" alt="meat">
+                                <img src="./images/HOW TO MAKE DELICIOUS  NKWOBI!.jpeg" alt="meat">
                                 <div class="menu_content">
-                                    <h4>meat  <span>$24</span></h4>
+                                    <h4>Nwkobi  <span>$24</span></h4>
                                     <p>Aperiam tempore sit,perferendis numquam repudiandae porro voluptate dicta saepe facilis.</p>
                                 </div>
                             </div>
@@ -148,60 +148,60 @@
                     <div class="row">
                         <div class="col-md-6">
                             <div class="single_menu">
-                                <img src="https://i.imgur.com/Aowufa1.jpg" alt="pizza">
+                                <img src="./images/Nigerian beans porridge.jpeg" alt="pizza">
                                 <div class="menu_content">
-                                    <h4>12" Pizza  <span>$35</span></h4>
+                                    <h4>Beans Porridge and Plantain  <span>$35</span></h4>
                                     <p>Aperiam tempore sit,perferendis numquam repudiandae porro voluptate dicta saepe facilis.</p>
                                 </div>
                             </div>
                             <div class="single_menu">
-                                <img src="https://i.imgur.com/DJlmZDJ.jpg" alt="salad">
+                                <img src="./images/Nigerian catfish peppersoup step by step recipe - Dream Africa.jpeg" alt="salad">
                                 <div class="menu_content">
-                                    <h4>Salad <span>$20</span></h4>
+                                    <h4>Catfish Pepper soup <span>$20</span></h4>
                                     <p>Aperiam tempore sit,perferendis numquam repudiandae porro voluptate dicta saepe facilis.</p>
                                 </div>
                             </div>
                             <div class="single_menu">
-                                <img src="https://i.imgur.com/knnQm7e.jpg" alt="green tea">
+                                <img src="./images/[Homemade] Jollof rice and peppered beef.jpeg" alt="green tea">
                                 <div class="menu_content">
-                                    <h4>green tea <span>$15</span></h4>
+                                    <h4>Jollof rice <span>$15</span></h4>
                                     <p>Aperiam tempore sit,perferendis numquam repudiandae porro voluptate dicta saepe facilis.</p>
                                 </div>
                             </div>
                             <div class="single_menu">
-                                <img src="https://i.imgur.com/YkDi8Nb.jpg" alt="meat">
+                                <img src="./images/Easy Nigerian Okro Soup_.jpeg" alt="meat">
                                 <div class="menu_content">
-                                    <h4>meat  <span>$24</span></h4>
+                                    <h4>Okro Soup  <span>$24</span></h4>
                                     <p>Aperiam tempore sit,perferendis numquam repudiandae porro voluptate dicta saepe facilis.</p>
                                 </div>
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="single_menu">
-                                <img src="https://i.imgur.com/kbpceNv.jpg" alt="burger">
+                                <img src="./images/The BEST SHRIMP SAUCE - RICH Source of PROTEIN !.jpeg" alt="burger">
                                 <div class="menu_content">
-                                    <h4>Chicken Burger  <span>$24</span></h4>
+                                    <h4>Shrimp Sauce  <span>$24</span></h4>
                                     <p>Aperiam tempore sit,perferendis numquam repudiandae porro voluptate dicta saepe facilis.</p>
                                 </div>
                             </div>
                             <div class="single_menu">
-                                <img src="https://i.imgur.com/lYKUORL.jpg" alt="black coffee">
+                                <img src="./images/List of My Top 10 Favorite Nigerian Foods.jpeg" alt="black coffee">
                                 <div class="menu_content">
-                                    <h4>Black coffee <span>$20</span></h4>
+                                    <h4>Fried yam and sauce <span>$20</span></h4>
                                     <p>Aperiam tempore sit,perferendis numquam repudiandae porro voluptate dicta saepe facilis.</p>
                                 </div>
                             </div>
                             <div class="single_menu">
-                                <img src="https://i.imgur.com/AXAHrf6.jpg" alt="fried rice">
+                                <img src="./images/Banga Soup (Niger-Delta way).jpeg" alt="fried rice">
                                 <div class="menu_content">
-                                    <h4>Fried Rice  <span>$45</span></h4>
+                                    <h4>Banga Soup  <span>$45</span></h4>
                                     <p>Aperiam tempore sit,perferendis numquam repudiandae porro voluptate dicta saepe facilis.</p>
                                 </div>
                             </div>
                             <div class="single_menu">
-                                <img src="https://i.imgur.com/YkDi8Nb.jpg" alt="meat">
+                                <img src="./images/Friend Plantain and Egg meal.jpeg" alt="meat">
                                 <div class="menu_content">
-                                    <h4>meat  <span>$24</span></h4>
+                                    <h4>Fried plantain and egg  <span>$24</span></h4>
                                     <p>Aperiam tempore sit,perferendis numquam repudiandae porro voluptate dicta saepe facilis.</p>
                                 </div>
                             </div>
