added menu page

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.2.3/css/bootstrap.min.css" integrity="sha512-SbiR/eusphKoMVVXysTKG/7VseWii+Y3FdHrt0EpKgpToZeemhqHeZeLWLhJutz/2ut2Vw1uQEj2MbRF+TVBUA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="/css/HomePage.css">
 
 </head>
@@ -32,7 +32,7 @@
                     <div class="right"></div>
                 </div>
                 <li class="nav-item">
-                    <a class="nav-link" href="javascript:void(0);"><i class="fas fa-bowl-food"></i>Menu</a>
+                    <a class="nav-link" href="/Menu.html"><i class="fas fa-bowl-food"></i>Menu</a>
                 </li>
                 <li class="nav-item active">
                     <a class="nav-link" href="javascript:void(0);"><i class="fas fa-percent"></i>Discounts</a>
@@ -54,229 +54,7 @@
         </div>
     </nav>
 
-    <!-- menu -->
-<section id="our_menu" class="pt-5 pb-5">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-12">
-                <div class="page_title text-center mb-4">
-                    <h1>our menu</h1>
-                    <div class="single_line"></div>
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <ul class="nav nav-tabs menu_tab mb-4" id="myTab" role="tablist">
-                <li class="nav-item">
-                    <a class="nav-link active" id="breakfast-tab" data-toggle="tab" href="#breakfast" role="tab">Breakfast</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" id="lunch-tab" data-toggle="tab" href="#lunch" role="tab">Lunch</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" id="dinner-tab" data-toggle="tab" href="#dinner" role="tab">Dinner</a>
-                </li>
-            </ul>
-        </div>
-        <div class="row">
-            <div class="tab-content col-lg-12" id="myTabContent">
-                <div class="tab-pane fade show active" id="breakfast" role="tabpanel" aria-labelledby="breakfast-tab">
-                    <div class="row">
-                        <div class="col-md-6">
-                            <div class="single_menu">
-                                <img src="./images/Afang Soup - Nigerian Cuisine.jpeg" alt="burger">
-                                <div class="menu_content">
-                                    <h4>Afang Soup  <span>$24</span></h4>
-                                    <p>Aperiam tempore sit,perferendis numquam repudiandae porro voluptate dicta saepe facilis.</p>
-                                </div>
-                            </div>
-                            <div class="single_menu">
-                                <img src="./images/Delicious Ofe Akwu _ Palm nut Soup.png" alt="black coffee">
-                                <div class="menu_content">
-                                    <h4>Akwu Stew  <span>$20</span></h4>
-                                    <p>Aperiam tempore sit,perferendis numquam repudiandae porro voluptate dicta saepe facilis.</p>
-                                </div>
-                            </div>
-                            <div class="single_menu">
-                                <img src="./images/Egusi Soup Recipe - How to cook egusi soup.jpeg" alt="fried rice">
-                                <div class="menu_content">
-                                    <h4>Egusi Soup  <span>$45</span></h4>
-                                    <p>Aperiam tempore sit,perferendis numquam repudiandae porro voluptate dicta saepe facilis.</p>
-                                </div>
-                            </div>
-                            <div class="single_menu">
-                                <img src="./images/Nigerian Moi Moi with Beans Flour.png" alt="meat">
-                                <div class="menu_content">
-                                    <h4>Moi Moi  <span>$24</span></h4>
-                                    <p>Aperiam tempore sit,perferendis numquam repudiandae porro voluptate dicta saepe facilis.</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-6">
-                            <div class="single_menu">
-                                <img src="./images/Nigerian Tomato Stew (Nigerian Red Stew).jpeg" alt="burger">
-                                <div class="menu_content">
-                                    <h4>Rice and Stew  <span>$24</span></h4>
-                                    <p>Aperiam tempore sit,perferendis numquam repudiandae porro voluptate dicta saepe facilis.</p>
-                                </div>
-                            </div>
-                            <div class="single_menu">
-                                <img src="./images/Peppered Ponmo Recipe -.jpeg" alt="black coffee">
-                                <div class="menu_content">
-                                    <h4>Peppered Ponmo <span>$20</span></h4>
-                                    <p>Aperiam tempore sit,perferendis numquam repudiandae porro voluptate dicta saepe facilis.</p>
-                                </div>
-                            </div>
-                            <div class="single_menu">
-                                <img src="/images/Foods in Nigeria_ Oxtail Peppersoup Recipe - Dream Africa.jpeg" alt="fried rice">
-                                <div class="menu_content">
-                                    <h4>Pepper Soup  <span>$45</span></h4>
-                                    <p>Aperiam tempore sit,perferendis numquam repudiandae porro voluptate dicta saepe facilis.</p>
-                                </div>
-                            </div>
-                            <div class="single_menu">
-                                <img src="./images/HOW TO MAKE DELICIOUS  NKWOBI!.jpeg" alt="meat">
-                                <div class="menu_content">
-                                    <h4>Nwkobi  <span>$24</span></h4>
-                                    <p>Aperiam tempore sit,perferendis numquam repudiandae porro voluptate dicta saepe facilis.</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="tab-pane fade" id="lunch" role="tabpanel" aria-labelledby="lunch-tab">
-                    <div class="row">
-                        <div class="col-md-6">
-                            <div class="single_menu">
-                                <img src="./images/Nigerian beans porridge.jpeg" alt="pizza">
-                                <div class="menu_content">
-                                    <h4>Beans Porridge and Plantain  <span>$35</span></h4>
-                                    <p>Aperiam tempore sit,perferendis numquam repudiandae porro voluptate dicta saepe facilis.</p>
-                                </div>
-                            </div>
-                            <div class="single_menu">
-                                <img src="./images/Nigerian catfish peppersoup step by step recipe - Dream Africa.jpeg" alt="salad">
-                                <div class="menu_content">
-                                    <h4>Catfish Pepper soup <span>$20</span></h4>
-                                    <p>Aperiam tempore sit,perferendis numquam repudiandae porro voluptate dicta saepe facilis.</p>
-                                </div>
-                            </div>
-                            <div class="single_menu">
-                                <img src="./images/[Homemade] Jollof rice and peppered beef.jpeg" alt="green tea">
-                                <div class="menu_content">
-                                    <h4>Jollof rice <span>$15</span></h4>
-                                    <p>Aperiam tempore sit,perferendis numquam repudiandae porro voluptate dicta saepe facilis.</p>
-                                </div>
-                            </div>
-                            <div class="single_menu">
-                                <img src="./images/Easy Nigerian Okro Soup_.jpeg" alt="meat">
-                                <div class="menu_content">
-                                    <h4>Okro Soup  <span>$24</span></h4>
-                                    <p>Aperiam tempore sit,perferendis numquam repudiandae porro voluptate dicta saepe facilis.</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-6">
-                            <div class="single_menu">
-                                <img src="./images/The BEST SHRIMP SAUCE - RICH Source of PROTEIN !.jpeg" alt="burger">
-                                <div class="menu_content">
-                                    <h4>Shrimp Sauce  <span>$24</span></h4>
-                                    <p>Aperiam tempore sit,perferendis numquam repudiandae porro voluptate dicta saepe facilis.</p>
-                                </div>
-                            </div>
-                            <div class="single_menu">
-                                <img src="./images/List of My Top 10 Favorite Nigerian Foods.jpeg" alt="black coffee">
-                                <div class="menu_content">
-                                    <h4>Fried yam and sauce <span>$20</span></h4>
-                                    <p>Aperiam tempore sit,perferendis numquam repudiandae porro voluptate dicta saepe facilis.</p>
-                                </div>
-                            </div>
-                            <div class="single_menu">
-                                <img src="./images/Banga Soup (Niger-Delta way).jpeg" alt="fried rice">
-                                <div class="menu_content">
-                                    <h4>Banga Soup  <span>$45</span></h4>
-                                    <p>Aperiam tempore sit,perferendis numquam repudiandae porro voluptate dicta saepe facilis.</p>
-                                </div>
-                            </div>
-                            <div class="single_menu">
-                                <img src="./images/Friend Plantain and Egg meal.jpeg" alt="meat">
-                                <div class="menu_content">
-                                    <h4>Fried plantain and egg  <span>$24</span></h4>
-                                    <p>Aperiam tempore sit,perferendis numquam repudiandae porro voluptate dicta saepe facilis.</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="tab-pane fade" id="dinner" role="tabpanel" aria-labelledby="dinner-tab">
-                    <div class="row">
-                        <div class="col-md-6">
-                            <div class="single_menu">
-                                <img src="https://i.imgur.com/kbpceNv.jpg" alt="burger">
-                                <div class="menu_content">
-                                    <h4>Chicken Burger  <span>$24</span></h4>
-                                    <p>Aperiam tempore sit,perferendis numquam repudiandae porro voluptate dicta saepe facilis.</p>
-                                </div>
-                            </div>
-                            <div class="single_menu">
-                                <img src="https://i.imgur.com/lYKUORL.jpg" alt="black coffee">
-                                <div class="menu_content">
-                                    <h4>Black coffee <span>$20</span></h4>
-                                    <p>Aperiam tempore sit,perferendis numquam repudiandae porro voluptate dicta saepe facilis.</p>
-                                </div>
-                            </div>
-                            <div class="single_menu">
-                                <img src="https://i.imgur.com/AXAHrf6.jpg" alt="fried rice">
-                                <div class="menu_content">
-                                    <h4>Fried Rice  <span>$45</span></h4>
-                                    <p>Aperiam tempore sit,perferendis numquam repudiandae porro voluptate dicta saepe facilis.</p>
-                                </div>
-                            </div>
-                            <div class="single_menu">
-                                <img src="https://i.imgur.com/YkDi8Nb.jpg" alt="meat">
-                                <div class="menu_content">
-                                    <h4>meat  <span>$24</span></h4>
-                                    <p>Aperiam tempore sit,perferendis numquam repudiandae porro voluptate dicta saepe facilis.</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-6">
-                            <div class="single_menu">
-                                <img src="https://i.imgur.com/kbpceNv.jpg" alt="burger">
-                                <div class="menu_content">
-                                    <h4>Chicken Burger  <span>$24</span></h4>
-                                    <p>Aperiam tempore sit,perferendis numquam repudiandae porro voluptate dicta saepe facilis.</p>
-                                </div>
-                            </div>
-                            <div class="single_menu">
-                                <img src="https://i.imgur.com/lYKUORL.jpg" alt="black coffee">
-                                <div class="menu_content">
-                                    <h4>Black coffee <span>$20</span></h4>
-                                    <p>Aperiam tempore sit,perferendis numquam repudiandae porro voluptate dicta saepe facilis.</p>
-                                </div>
-                            </div>
-                            <div class="single_menu">
-                                <img src="https://i.imgur.com/AXAHrf6.jpg" alt="fried rice">
-                                <div class="menu_content">
-                                    <h4>Fried Rice  <span>$45</span></h4>
-                                    <p>Aperiam tempore sit,perferendis numquam repudiandae porro voluptate dicta saepe facilis.</p>
-                                </div>
-                            </div>
-                            <div class="single_menu">
-                                <img src="https://i.imgur.com/YkDi8Nb.jpg" alt="meat">
-                                <div class="menu_content">
-                                    <h4>meat  <span>$24</span></h4>
-                                    <p>Aperiam tempore sit,perferendis numquam repudiandae porro voluptate dicta saepe facilis.</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <a href="#" class=" menu_btn btn btn-danger">view more</a>
-        </div>
-    </div>
-</section>   
+
     <!-- login -->
     <div class="overlay">
         <div class="login">
