--- a/index.html
+++ b/index.html
@@ -1,118 +1,167 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>kulture kitchen</title>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css'>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css"
-        integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.2.3/css/bootstrap.min.css" integrity="sha512-SbiR/eusphKoMVVXysTKG/7VseWii+Y3FdHrt0EpKgpToZeemhqHeZeLWLhJutz/2ut2Vw1uQEj2MbRF+TVBUA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="/css/HomePage.css">
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css"
+      integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.2.3/css/bootstrap.min.css"
+      integrity="sha512-SbiR/eusphKoMVVXysTKG/7VseWii+Y3FdHrt0EpKgpToZeemhqHeZeLWLhJutz/2ut2Vw1uQEj2MbRF+TVBUA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
+      integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="stylesheet" href="/css/HomePage.css" />
+  </head>
 
-</head>
-
-<body>
+  <body>
     <!-- navbar -->
     <nav class="navbar navbar-expand-custom navbar-mainbg">
-        <a class="navbar-brand navbar-logo" href="#">kulture kitchen</a>
-        <button class="navbar-toggler" type="button" aria-controls="navbarSupportedContent" aria-expanded="false"
-            aria-label="Toggle navigation">
-            <i class="fas fa-bars text-black"></i>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav ml-auto">
-                <div class="hori-selector">
-                    <div class="left"></div>
-                    <div class="right"></div>
-                </div>
-                <li class="nav-item">
-                    <a class="nav-link" href="/Menu.html"><i class="fas fa-bowl-food"></i>Menu</a>
-                </li>
-                <li class="nav-item active">
-                    <a class="nav-link" href="javascript:void(0);"><i class="fas fa-percent"></i>Discounts</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/contact.html"><i class="fas fa-address-book"></i>Contact</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="javascript:void(0);" onclick="toggleLogin()"><i
-                            class="fas fa-arrow-right-to-bracket"></i>Login</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="javascript:void(0);" onclick="toggleRegister()"><i class="fas fa-address-card"></i>Register</a>
-                </li>
-                <!--<li class="nav-item">
+      <a class="navbar-brand navbar-logo" href="#">kulture kitchen</a>
+      <button
+        class="navbar-toggler"
+        type="button"
+        aria-controls="navbarSupportedContent"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <i class="fas fa-bars text-black"></i>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav ml-auto">
+          <div class="hori-selector">
+            <div class="left"></div>
+            <div class="right"></div>
+          </div>
+          <li class="nav-item">
+            <a class="nav-link" href="/Menu.html"
+              ><i class="fas fa-bowl-food"></i>Menu</a
+            >
+          </li>
+          <li class="nav-item active">
+            <a class="nav-link" href="javascript:void(0);"
+              ><i class="fas fa-percent"></i>Discounts</a
+            >
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/contact.html"
+              ><i class="fas fa-address-book"></i>Contact</a
+            >
+          </li>
+          <li class="nav-item">
+            <a
+              class="nav-link"
+              href="javascript:void(0);"
+              onclick="toggleLogin()"
+              ><i class="fas fa-arrow-right-to-bracket"></i>Login</a
+            >
+          </li>
+          <li class="nav-item">
+            <a
+              class="nav-link"
+              href="javascript:void(0);"
+              onclick="toggleRegister()"
+              ><i class="fas fa-address-card"></i>Register</a
+            >
+          </li>
+          <!--<li class="nav-item">
                     <a class="nav-link" href="javascript:void(0);"><i class="far fa-copy"></i>Documents</a>
                 </li> -->
-            </ul>
-        </div>
+        </ul>
+      </div>
     </nav>
-
 
     <!-- login -->
     <div class="overlay">
-        <div class="login">
-            <div class="header">
-                <h1>Login</h1>
-                <i class="fas fa-times" onclick="toggleLogin()"></i>
-            </div>
-            <div class="body">
-                <form action="#" class="form">
-                    <input type="text" placeholder="username" />
-                    <input type="password" placeholder="Password" />
-                </form>
-            </div>
-            <div class="footer">
-                <button>Login</button>
-            </div>
+      <div class="login">
+        <div class="header">
+          <h1>Login</h1>
+          <i class="fas fa-times" onclick="toggleLogin()"></i>
         </div>
+        <div class="body">
+          <form action="#" class="form">
+            <input type="text" placeholder="username" />
+            <input type="password" placeholder="Password" />
+          </form>
+        </div>
+        <div class="footer">
+          <button>Login</button>
+        </div>
+      </div>
     </div>
     <!-- register -->
     <div class="overlay-register">
-        <div class="register">
-            <div class="header">
-                <h1>Registration</h1>
-                <i class="fas fa-times" onclick="toggleRegister()"></i>
-            </div>
-            <div class="body">
-                <form action="#" class="form">
-                    <input type="text" placeholder="First Name" />
-                    <input type="text" placeholder="Last Name" />
-                    <input type="text" placeholder="Username" />
-                    <input type="text" placeholder="Email address" />
-                    <input type="password" placeholder="Password" />
-                    <input type="password" placeholder="Confirm Password" />
-                    <div class="gender">
-                        <input type="radio" value="None" id="male" name="gender" checked />
-                        <label for="male" class="radio">Male</label>
-                        <input type="radio" value="None" id="female" name="gender" />
-                        <label for="female" class="radio">Female</label>
-                    </div>
-                    <p>By clicking Register, you agree to our <a href="#">terms and condition</a>.</p>
-                </form>
-            </div>
-            <div class="footer">
-                <button>Register</button>
-            </div>
+      <div class="register">
+        <div class="header">
+          <h1>Registration</h1>
+          <i class="fas fa-times" onclick="toggleRegister()"></i>
         </div>
+        <div class="body">
+          <form action="#" class="form">
+            <input type="text" placeholder="First Name" />
+            <input type="text" placeholder="Last Name" />
+            <input type="text" placeholder="Username" />
+            <input type="text" placeholder="Email address" />
+            <input type="password" placeholder="Password" />
+            <input type="password" placeholder="Confirm Password" />
+            <div class="gender">
+              <input
+                type="radio"
+                value="None"
+                id="male"
+                name="gender"
+                checked
+              />
+              <label for="male" class="radio">Male</label>
+              <input type="radio" value="None" id="female" name="gender" />
+              <label for="female" class="radio">Female</label>
+            </div>
+            <p>
+              By clicking Register, you agree to our
+              <a href="#">terms and condition</a>.
+            </p>
+          </form>
+        </div>
+        <div class="footer">
+          <button>Register</button>
+        </div>
+      </div>
     </div>
 
-
     <!-- partial -->
-    <script src='https://code.jquery.com/jquery-3.4.1.min.js'></script>
-    <script src='https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js'></script>
-    <script src='https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js'></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.2.3/js/bootstrap.min.js" integrity="sha512-1/RvZTcCDEUjY/CypiMz+iqqtaoQfAITmNSJY17Myp4Ms5mdxPS5UV7iOfdZoxcGhzFbOm6sntTKJppjvuhg4g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js"></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.2.3/js/bootstrap.min.js"
+      integrity="sha512-1/RvZTcCDEUjY/CypiMz+iqqtaoQfAITmNSJY17Myp4Ms5mdxPS5UV7iOfdZoxcGhzFbOm6sntTKJppjvuhg4g=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
     <script src="/js/navbar.js"></script>
     <script src="/js/login.js"></script>
     <script src="/js/register.js"></script>
-
-</body>
-
+  </body>
 </html>
